--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^22.13.11",
+    "dgram": "^1.0.1",
     "express": "^5.1.0"
   },
   "description": ""
