--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@types/node": "^22.13.11",
     "dgram": "^1.0.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "@vercel/kv": "^3.0.0"
   },
   "description": ""
 }
